force-app/src/objects/c2g__codaSortOrder__c.object
<CustomObject>
    <description>Stores the sort order used by a selection definition in Certinia Print Formatter.</description>
    <fields>
        <fullName>c2g__Ascending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ascending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__PrintFormat__c</fullName>
        <label>PrintFormat</label>
        <referenceTo>c2g__codaPrintFormat__c</referenceTo>
        <relationshipLabel>Sort Orders</relationshipLabel>
        <relationshipName>Sort_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__SortSequence__c</fullName>
        <label>SortSequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VocabId__c</fullName>
        <label>VocabId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Sort Order</label>
    <nameField>
        <label>Sort Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sort Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>